corrección end points, restructuración tabla concepto, restructuración de test, se agrega sql para la eliminación de columnas en tabla de concepto.